# monobinpy

./: MANIFEST.in  README.md  gcd.csv  pyproject.toml  setup.py
src/monobinpy/: __init__.py  _helpers.py  cum_bin.py  iso_bin.py  ndr_bin.py  pct_bin.py  sts_bin.py  woe_bin.py
