[build-system]
requires      = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monobinpy"
version = "0.0.1"
description = "Monotonic Binning for Credit Rating Models"
readme = "README.md"
authors = [{ name = "Andrija Djurovic", email = "djandrija@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = ["numpy >= 1.20.3", "pandas >= 1.3.4", "scipy >= 1.5.3", "scikit-learn >= 1.0.1",
                "statsmodels >= 0.13.1"]
requires-python = ">=3.8"

[project.optional-dependencies]
build = ["build", "twine"]

[project.urls]
repository = "https://github.com/andrija-djurovic/monobinpy"
